Inclusão das classes, arquivos e páginas para inclusão, alteração e pesquisa de Raças e Espécies. Alteração das páginas de cadastro e pesquisa de Animal para permitir o cadastro e a alteração da Raça/Espécie diretamente do cadastro de animal.

--- a/Gestao_PetShop/src/main/resources/messages.properties
+++ b/Gestao_PetShop/src/main/resources/messages.properties
@@ -13,3 +13,6 @@ cpf.existente=J\u00E1 existe um cliente cadastrado com esse CPF na base de dados
 petshop.fornecedor=Fornecedor
 cnpj.existente=J\u00E1 existe um fornecedor cadastrado com esse CNPJ na base de dados!
 
+petshop.raca=Raca
+nome.existente=J\u00E1 existe uma ra\u00e7a cadastrada com esse nome na base de dados!
+
